# cairo-plonk-verifier

./: .gitignore  Scarb.toml  license  readme.md
.github/workflows/: plonk.yml
cairo_circuit_codegen/: .gitignore  Cargo.toml  out.cairo
cairo_circuit_codegen/src/: circuit.rs  fq.rs  fq2.rs  lib.rs  main.rs
cairo_circuit_codegen/src/circuit/: adder.rs  builder.rs  circuit.rs  constants.rs  mod.rs  utils.rs
cairo_circuit_codegen/src/fields/: affine.rs  fq.rs  fq12.rs  fq12_squaring.rs  fq2.rs  fq6.rs  mod.rs  sparse.rs
cairo_circuit_codegen/src/pairing/: ate_miller.rs  (+2 more)
circuit-macros/: Cargo.toml  Scarb.toml
circuit-macros/src/: lib.rs
circuit_testing/: Scarb.toml
circuit_testing/src/: lib.cairo
cli/: .env.example  Cargo.toml  README.md
cli/src/: cli.rs  error.rs  lib.rs  main.rs
cli/src/commands/: mod.rs  type.rs  type_conversion.rs  types.rs  utils.rs  verify.rs
contract/: .gitignore  Scarb.toml
contract/src/: lib.cairo
contracts/: Scarb.toml
contracts/pairing/: .gitignore  Scarb.toml
contracts/plonk-verifier/: .gitignore  Scarb.toml  snfoundry.toml
contracts/scripts/: README.md  bytecode_size.py  code_limit.py  code_limits.py
contracts/src/: lib.cairo
contracts/test-u384-inputs/: Scarb.toml
plonk-verifier/: .gitignore  Scarb.toml  out.cairo
plonk-verifier/.snfoundry_cache/: .prev_tests_failed
plonk-verifier/src/: circuits.cairo  curve.cairo  errors.cairo  lib.cairo  traits.cairo
plonk-verifier/tests/: benchmarks.cairo  lib.cairo
src/curve/: constants.cairo
src/fields/: fq_1.cairo
src/plonk/: utils.cairo  verify.cairo
(+81 files in other folders)
