[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["cargo", "derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15.0"
starknet = "0.12.0"
primitive-types = "0.13.1"
num-bigint = "0.4"
num-traits = "0.2"

[[bin]]
name = "cli"
path = "src/main.rs"
